2002-08-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed the pot file name for gperfmeter.

2002-08-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed branch of bug-buddy to
	gnome-2-0.

2002-08-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added missing tags for file-roller.

2002-08-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed version info
	for firestarter.

2002-08-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed branch of yelp to
	gnome-2-0.

2002-08-02  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed the pot file name for file-roller.

2002-08-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added file-roller.

2002-08-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed the pot file name for gnomemeeting.

2002-08-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed branch of gconf-editor to
	gnome-2-0.

2002-07-30  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed branches of gnome-panel and
	gnome-session to gnome-2-0.

2002-07-29  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Moved metatheme to 2.0 extras.

2002-07-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-vfs-extras.

2002-07-18  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Corrected branch of gnome-games to
	gnome-2-0.

2002-07-18  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Corrected branch of gnome-control-center
	to gnome-2-0.

2002-07-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added vte.

2002-07-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed the pot file name for gnomemeeting.

2002-07-14  Carlos Perello Marin <carlos@gnome-db.org>
