@@ -1920,11 +1920,13 @@
     </version>
   </module>
   <module name="mrproject">
-    <version release="gnome-1.4-fifth-toe">
-      <component name="mrproject" dir="gnome-i18n">
-	<podir dir="extra-po/mrproject"/>
+    <version release="gnome-2.0-extras">
+      <component name="mrproject" dir="mrproject">
+	<podir dir="po"/>
 	<potname name="mrproject.pot"/>
 	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
       </component>
     </version>
   </module>
