@@ -1,3 +1,7 @@
+2002-08-20  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Fixed info for mrproject.
+
 2002-08-14  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Fixed the pot file name for gperfmeter.
